--- a/index.html
+++ b/index.html
@@ -36,11 +36,18 @@
 							<div class="input-group">
 								<span class="input-group-addon">难度</span>
 								<select class="form-control" id="ballspeedset">
-									<option value="2">简单难度（Speed 2）</option>
-									<option value="3" selected>普通难度（Speed 3）</option>
-									<option value="5">困难模式（Speed 5）</option>
-									<option value="7">极限模式（Speed 7）</option>
-									<option value="9">非人类（Speed 9）</option>
+									<option value="1">极简单（Speed 1）</option>
+									<option value="2">简单（Speed 2）</option>
+									<option value="3">普通（Speed 3）</option>
+									<option value="5">进阶（Speed 5）</option>
+									<option value="7" selected>困难（Speed 7）</option>
+									<option value="9">死亡细胞（Speed 9）</option>
+									<option value="10">茶杯头（Speed 10）</option>
+									<option value="11">奥里与迷失森林（Speed 11）</option>
+									<option value="12">黑暗之魂（Speed 12）</option>
+									<option value="13">只狼（Speed 13）</option>
+									<option value="14">蔚蓝（Speed 14）</option>
+									<option value="15">I Wanna be the Guy（Speed 15）</option>
 								</select>
 								<div class="input-group-btn">
 									<button type="button" class="btn btn-danger" onclick="window.startGame()">开始游戏</button>
