--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h2>CXK 打篮球</h2>
-					<p>CXK，出来打球！</p>
+					<p>CXK，出来打球！(unstable)</p>
 					<hr>
 					<center>
 						<p>
@@ -41,9 +41,10 @@
 									<option value="3">普通（Speed 3）</option>
 									<option value="5">进阶（Speed 5）</option>
 									<option value="7" selected>困难（Speed 7）</option>
-									<option value="9">死亡细胞（Speed 9）</option>
-									<option value="10">茶杯头（Speed 10）</option>
-									<option value="11">奥里与迷失森林（Speed 11）</option>
+									<option value="8">死亡细胞（Speed 8）</option>
+									<option value="9">茶杯头（Speed 9）</option>
+									<option value="10">奥里与迷失森林（Speed 10）</option>
+									<option value="11">空洞骑士（Speed 11）</option>
 									<option value="12">黑暗之魂（Speed 12）</option>
 									<option value="13">只狼（Speed 13）</option>
 									<option value="14">蔚蓝（Speed 14）</option>
@@ -61,16 +62,23 @@
 						<p><canvas id="canvas" style="width: 100%;height: 563px;"></canvas></p>
 					</center>
 					<hr>
+					<h2>请按下键盘上的 F12，切换至[控制台]，接收提示信息</h2>
 					<h3>游戏说明</h3>
-					<p>使用方向键控制 CXK 左右移动，使用回车让 CXK 发球，按 P 暂停游戏，通关后按 N 进入下一关</p>
-					<p>特殊技能：W 发起虚鲲鬼步，5 秒内能 100% 接住球，每次消耗 1000 积分。</p>
+					<p>使用方向键控制 CXK 左右移动。</p>
+					<p>使用回车让 CXK 发球。</p>
+					<p>按 P 暂停游戏。</p>
+					<p>通关后按 N 进入下一关。</p>
+					<p>技能[Q] 意念控球，控制球转向一次，朝向离球最近的一个砖块。冷却 5 秒，消耗积分比率 4</p>
+					<p>技能[W] 虚鲲鬼步，5 秒内可以无视移动速度限制，100% 接住篮球。冷却 15 秒，消耗积分比率 15</p>
 					<p>移动端可以点击屏幕左右控制 CXK 移动。</p>
 					<p>如果出现显示不正常的情况请截图并通过 Issues 反馈。</p>
+					<p>欢迎来玩难度选择时涉及的游戏</p>
 					<hr>
 					<h3>更新记录</h3>
 					<details>
 						<summary style="cursor: pointer;">点击查看更新内容</summary>
 						<div style="margin-top: 8px;">
+							<p>[分支]1.6.1：修复分数不扣除问题，添加更多难度，修正分值增长公式</p>
 							<p>1.6：增加接球动作，修复球落地判定问题</p>
 							<p>1.5：增加更多的特效</p>
 							<p>1.4：增加难度设定功能</p>
@@ -81,7 +89,8 @@
 						</div>
 					</details>
 					<hr>
-					<p>Github 开源项目：<a href="https://github.com/kasuganosoras/cxk-ball" target="_blank">https://github.com/kasuganosoras/cxk-ball</a>（原作者：<a href="https://github.com/yangyunhe369" target="_blank">yangyunhe369</a>）</p>
+					<p>地址：<a href="https://github.com/iotang/cxk-ball" target="_blank">https://github.com/iotang/cxk-ball</a></p>
+					<p>来自 Github 开源项目：<a href="https://github.com/kasuganosoras/cxk-ball" target="_blank">https://github.com/kasuganosoras/cxk-ball</a>（原作者：<a href="https://github.com/yangyunhe369" target="_blank">yangyunhe369</a>）</p>
 					<p>喜欢的话欢迎点个 Star~</p>
 				</div>
 			</div>
