--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 					<details>
 						<summary style="cursor: pointer;">点击查看更新内容</summary>
 						<div style="margin-top: 8px;">
+							<p>[分支]1.6.2：显示技能</p>
 							<p>[分支]1.6.1：修复分数不扣除问题，添加更多难度，修正分值增长公式</p>
 							<p>1.6：增加接球动作，修复球落地判定问题</p>
 							<p>1.5：增加更多的特效</p>
