--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 					<p>使用回车让 CXK 发球。</p>
 					<p>按 P 暂停游戏。</p>
 					<p>通关后按 N 进入下一关。</p>
-					<p>技能[Q] 意念控球，控制球转向一次，朝向离球最近的一个砖块。冷却 3 秒，消耗积分比率 4</p>
-					<p>技能[W] 虚鲲鬼步，5 秒内可以无视移动速度限制，100% 接住篮球。冷却 15 秒，消耗积分比率 15</p>
+					<p>技能[Q] 意念控球，控制球转向一次，朝向离球最近的一个砖块。</p>
+					<p>技能[W] 虚鲲鬼步，5 秒内可以无视移动速度限制，100% 接住篮球。</p>
+					<p>技能[E] 闪烁之鲲，向当前朝向闪烁一小段距离。</p>
 					<p>移动端可以点击屏幕左右控制 CXK 移动。</p>
 					<p>如果出现显示不正常的情况请截图并通过 Issues 反馈。</p>
 					<p>欢迎来玩难度选择时涉及的游戏</p>
@@ -77,7 +78,8 @@
 					<details>
 						<summary style="cursor: pointer;">点击查看更新内容</summary>
 						<div style="margin-top: 8px;">
-							<p>[分支]1.6.2：显示技能</p>
+							<p>[分支]1.6.3：修复技能连击 bug，增加技能E</p>
+							<p>[分支]1.6.2：显示技能 HUD</p>
 							<p>[分支]1.6.1：修复分数不扣除问题，添加更多难度，修正分值增长公式</p>
 							<p>1.6：增加接球动作，修复球落地判定问题</p>
 							<p>1.5：增加更多的特效</p>
