（希望）修复了篮球可能会一直艹墙的问题，并添加最高分记录功能

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 					<details>
 						<summary style="cursor: pointer;">点击查看更新内容</summary>
 						<div style="margin-top: 8px;">
+							<p>[分支]1.6.4：修正技能Q的速度 bug，增加最高分功能</p>
 							<p>[分支]1.6.3：修复技能连击 bug，增加技能E</p>
 							<p>[分支]1.6.2：显示技能 HUD</p>
 							<p>[分支]1.6.1：修复分数不扣除问题，添加更多难度，修正分值增长公式</p>
