--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 				<details>
 					<summary style="cursor: pointer;">点击查看更新内容</summary>
 					<div style="margin-top: 8px;">
+						<p>[分支]1.6.5：修正有关球的移动 bug，更改技能W</p>
 						<p>[分支]1.6.4：修正技能Q的速度 bug，增加最高分功能</p>
 						<p>[分支]1.6.3：修复技能连击 bug，增加技能E</p>
 						<p>[分支]1.6.2：显示技能 HUD</p>
