添加移动端支持，增加技能R

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 				<p>通关后按 N 进入下一关。</p>
 				<p>技能[Q] 意念控球，控制球转向一次，朝向离球最近的一个砖块。</p>
 				<p>技能[W] 虚鲲鬼步，5 秒内让篮球跟着 CXK。</p>
-				<p>技能[E] 闪烁之鲲，向当前朝向闪烁一小段距离。</p>
+				<p>技能[E] 闪烁之鲲，向当前朝向闪烁一小段距离。如果离球足够近，那么会直接闪烁到球的下面。</p>
+				<p>技能[R] 爱坤之祝，其它三个技能的 CD 和消耗大幅降低。</p>
 				<p>移动端可以点击屏幕左右控制 CXK 移动。</p>
 				<p>如果出现显示不正常的情况请截图并通过 Issues 反馈。</p>
 				<p>欢迎来玩难度选择时涉及的游戏</p>
@@ -82,6 +83,7 @@
 				<details>
 					<summary style="cursor: pointer;">点击查看更新内容</summary>
 					<div style="margin-top: 8px;">
+						<p>[分支]1.6.6：修正移动端体验，增加技能R，CXK 技能已经凑齐</p>
 						<p>[分支]1.6.5：修正有关球的移动 bug，更改技能W</p>
 						<p>[分支]1.6.4：修正技能Q的速度 bug，增加最高分功能</p>
 						<p>[分支]1.6.3：修复技能连击 bug，增加技能E</p>
