增加连击技术，增加关卡

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 				<details>
 					<summary style="cursor: pointer;">点击查看更新内容</summary>
 					<div style="margin-top: 8px;">
+						<p>[分支]1.6.8：增加连击计数，关卡增至 5 关</p>
 						<p>[分支]1.6.7：修正移动端体验，优化性能</p>
 						<p>[分支]1.6.6：修正移动端体验，增加技能R，CXK 技能已经凑齐</p>
 						<p>[分支]1.6.5：修正有关球的移动 bug，更改技能W</p>
