--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<p>技能[E] 闪烁之鲲，向当前朝向闪烁一小段距离。如果离球足够近，那么会直接闪烁到球的下面。</p>
 				<p>技能[R] 爱坤之祝，其它三个技能的 CD 和消耗大幅降低，持续 10 秒。</p>
 				<p>如果出现显示不正常的情况请截图并通过 Issues 反馈。</p>
-				<p>欢迎来玩难度选择时涉及的游戏</p>
+				<p>难度排名仅供娱乐</p>
 				<details>
 					<summary style="font-size: 18px; cursor: pointer;">移动端点此查看操作</summary>
 					<img src="images/cxk_ball_control.png" width="100%">
@@ -89,10 +89,10 @@
 					<div style="margin-top: 8px;">
 						<p>[分支]1.6.8：增加连击计数，关卡增至 5 关</p>
 						<p>[分支]1.6.7：修正移动端体验，优化性能</p>
-						<p>[分支]1.6.6：修正移动端体验，增加技能R，CXK 技能已经凑齐</p>
+						<p>[分支]1.6.6：修正移动端体验，增加技能 R，CXK 技能已经凑齐</p>
 						<p>[分支]1.6.5：修正有关球的移动 bug，更改技能W</p>
 						<p>[分支]1.6.4：修正技能Q的速度 bug，增加最高分功能</p>
-						<p>[分支]1.6.3：修复技能连击 bug，增加技能E</p>
+						<p>[分支]1.6.3：修复技能连击 bug，增加技能 E</p>
 						<p>[分支]1.6.2：显示技能 HUD</p>
 						<p>[分支]1.6.1：修复分数不扣除问题，添加更多难度，修正分值增长公式</p>
 						<p>1.6：增加接球动作，修复球落地判定问题</p>
