--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
 								<option value="7" selected>困难（Speed 7）</option>
 								<option value="8">死亡细胞（Speed 8）</option>
 								<option value="9">茶杯头（Speed 9）</option>
-								<option value="10">奥里与迷失森林（Speed 10）</option>
-								<option value="11">空洞骑士（Speed 11）</option>
+								<option value="10">空洞骑士（Speed 10）</option>
+								<option value="11">超级马里奥世界（Speed 11）</option>
 								<option value="12">黑暗之魂（Speed 12）</option>
 								<option value="13">只狼（Speed 13）</option>
-								<option value="14">蔚蓝（Speed 14）</option>
-								<option value="15">I Wanna be the Guy（Speed 15）</option>
+								<option value="14">超级马里奥兄弟（Speed 14）</option>
+								<option value="15">马里奥制造 - 困难（Speed 15）</option>
+								<option value="16">蔚蓝（Speed 16）</option>
+								<option value="17">马里奥制造 - 极难（Speed 17）</option>
+								<option value="18">I Wanna be the Guy（Speed 18）</option>
 							</select>
 							<div class="input-group-btn">
 								<button type="button" class="btn btn-danger" onclick="window.startGame()">开始游戏</button>
