--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 				<p>回车：让亦可发球。</p>
 				<p>P：暂停游戏。</p>
 				<p>N：通关后进入下一关。</p>
-				<p>技能[Q] 磁力牵引，控制球转向一次，朝向离球最近的一个砖块。</p>
-				<p>技能[W] 轨迹干扰，5 秒内让篮球跟着亦可。</p>
+				<p>技能[Q] 磁力牵引，控制 EVA 转向一次，朝向离 EVA 最近的一个砖块。</p>
+				<p>技能[W] 轨迹干扰，5 秒内让 EVA 跟着亦可。</p>
 				<p>技能[E] 快速迭代，向当前朝向立刻移动一小段距离。</p>
-				<p>技能[R] 超频模式，其它三个技能的 CD 和消耗大幅降低，持续 10 秒。</p>
+				<p>技能[R] 超频模式，砖块不会反弹 EVA，持续 10 秒。</p>
 				<p>难度排名仅供娱乐</p>
 				<hr>
 				<hr>
