--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
 						<div class="input-group">
 							<span class="input-group-addon">难度</span>
 							<select class="form-control" id="ballspeedset">
-								<option value="5">非常简单（Speed 5）</option>
-								<option value="6">简单（Speed 6）</option>
-								<option value="7">一般（Speed 7）</option>
-								<option value="8">困难（Speed 8）</option>
-								<option value="9">极难（Speed 9）</option>
-								<option value="10">莱希拉姆（Speed 10）</option>
-								<option value="11">凤王（Speed 11）</option>
+								<option value="5">伊布（Speed 5）</option>
+								<option value="6">火球鼠（Speed 6）</option>
+								<option value="7">利欧路（Speed 7）</option>
+								<option value="8">胖可丁（Speed 8）</option>
+								<option value="9">黑夜魔灵（Speed 9）</option>
+								<option value="10">森林蜥蜴（Speed 10）</option>
+								<option value="11">时拉比（Speed 11）</option>
 								<option value="12">超梦（Speed 12）</option>
-								<option value="13">酋雷姆（Speed 13）</option>
-								<option value="14">烈空坐（Speed 14）</option>
-								<option value="15">骑拉帝纳（Speed 15）</option>
-								<option value="16">无极汰那（Speed 16）</option>
-								<option value="17">奈克洛兹玛（Speed 17）</option>
-								<option value="18">阿尔宙斯（Speed 18）</option>
+								<option value="13">莱希拉姆（Speed 13）</option>
+								<option value="14">凤王（Speed 14）</option>
+								<option value="15">哲尔尼亚斯（Speed 15）</option>
+								<option value="16">烈空坐（Speed 16）</option>
+								<option value="17">帝牙卢卡（Speed 17）</option>
+								<option value="18">无极汰那（Speed 18）</option>
+								<option value="19">奈克洛兹玛（Speed 19）</option>
+								<option value="20">阿尔宙斯（Speed 20）</option>
 							</select>
 							<div class="input-group-btn">
 								<button type="button" class="btn btn-danger" onclick="window.startGame()">开始游戏</button>
@@ -56,14 +58,16 @@
 				</center>
 				<hr>
 				<h3>游戏说明</h3>
+				<p>操控小机器人亦可，顶起 E 志小球，让 E 志小球击落所有砖块！</p>
+				<br>
 				<p>方向键：控制亦可左右移动。</p>
 				<p>回车：让亦可发球。</p>
 				<p>P：暂停游戏。</p>
 				<p>N：通关后进入下一关。</p>
-				<p>技能[Q] 磁力牵引，控制 EVA 转向一次，朝向离 EVA 最近的一个砖块。</p>
-				<p>技能[W] 轨迹干扰，5 秒内让 EVA 跟着亦可。</p>
-				<p>技能[E] 快速迭代，向当前朝向立刻移动一小段距离。</p>
-				<p>技能[R] 超频模式，砖块不会反弹 EVA，持续 10 秒。</p>
+				<p>技能[Q] 磁力牵引，控制球转向一次，朝向离球最近的一个砖块。</p>
+				<p>技能[W] 轨迹干扰，5 秒内让球跟着亦可。</p>
+				<p>技能[E] 快速迭代，让亦可向当前朝向立刻移动一小段距离。</p>
+				<p>技能[R] 超频模式，砖块将不会反弹球，持续 10 秒。</p>
 				<p>难度排名仅供娱乐</p>
 				<hr>
 				<hr>
